# ffmpegDemo

./: CMakeLists.txt  README.md  demuxer_audio.h  demuxer_video.c  main.c  remuxing.c  remuxing.h
decode/: decode_audio.c  decode_audio.h
demuxer/: demuxer_audio.c  demuxer_video.c  demuxer_video.h
